--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"dev": "ts-node-dev --inspect --transpile-only --ignore node_modules --watch src src/server.ts",
-		"typeorm": "typeorm-ts-node-commonjs",
-		"savid": "aiaia"
+		"typeorm": "typeorm-ts-node-commonjs"
 	},
 	"keywords": [],
 	"author": "",
@@ -18,10 +17,12 @@
 		"csv-parse": "^5.6.0",
 		"express": "^4.21.2",
 		"express-async-errors": "^3.1.1",
+		"install": "^0.13.0",
+		"jest": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.4.0",
-		"reflect-metadata": "^0.1.13",
+		"reflect-metadata": "^0.1.14",
 		"swagger-ui-express": "^5.0.1",
 		"ts-node-dev": "^2.0.0",
 		"tsyringe": "^4.8.0",
@@ -31,12 +32,14 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.8",
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.13.1",
 		"@types/swagger-ui-express": "^4.1.7",
 		"@types/uuid": "^10.0.0",
 		"nodemon": "^3.1.9",
+		"ts-jest": "^29.2.5",
 		"ts-node": "10.9.1",
 		"typescript": "^4.5.2"
 	}
