--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
 		//	"@modules/*": ["modules/*"],
 		//	"@config/*": ["config/*"],
 		//	"@shared/*": ["shared/*"],
-		//	"@errors/*": ["errors/*"],
-		//	"@utils/*": ["utils/*"],
+		//"@errors/*": ["errors/*"],
+		//"@utils/*": ["utils/*"]
 		//	"@database/*": ["database/*"]
 		//},
 		//"baseUrl": "./src"
